--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -6,7 +6,7 @@ authors:
     email: zw11@illinois.edu
     github: kevinzbw
   Zixin:
-    name: Zixin HUang
+    name: Zixin Huang
     display_name: Zixin
     email: zixinh2@illinois.edu
     github: yekerr
